class.newInstance 被废弃